fix(tabs): fix overflow leaking out tab-content
closes #913

--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -7,6 +7,7 @@ md-tabs {
   display: block;
   width: 100%;
   font-weight: 500;
+  overflow: auto;
 }
 
 .md-header {
